fixed navbar icon flickering

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
-
+html, body {
+  overflow-x: hidden;
+}
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
